--- a/01-blank-project/public/app.css
+++ b/01-blank-project/public/app.css
@@ -4,8 +4,8 @@ body {
 
 #khanonjs {
     width: 100vw;
-    height: 90vh;
+    height: 100vh;
     outline: none;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: #333;
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0); /* mobile webkit */
 }
