--- a/02-app-workflow/public/app.css
+++ b/02-app-workflow/public/app.css
@@ -1,5 +1,6 @@
 body {
     margin: 0px;
+    overflow: hidden;
 }
 
 #khanonjs {
@@ -7,5 +8,57 @@ body {
     height: 100vh;
     outline: none;
     background-color: #333;
-    -webkit-tap-highlight-color: rgba(255, 255, 255, 0); /* mobile webkit */
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+    /* mobile webkit */
+}
+
+#loading-screen {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #2f2f2f;
+}
+
+#loading-screen-text {
+    color: white;
+    margin-bottom: 5%;
+}
+
+#loading-screen-spinner {
+    width: 20%;
+    height: 20%;
+}
+
+/* HTML: <div class="loader"></div> */
+.loader {
+    width: 80px;
+    height: 70px;
+    border: 5px solid #000;
+    padding: 0 8px;
+    box-sizing: border-box;
+    background:
+        linear-gradient(#fff 0 0) 0 0/8px 20px,
+        linear-gradient(#fff 0 0) 100% 0/8px 20px,
+        radial-gradient(farthest-side, #fff 90%, #0000) 0 5px/8px 8px content-box,
+        #000;
+    background-repeat: no-repeat;
+    animation: l3 2s infinite linear;
+}
+
+@keyframes l3 {
+    25% {
+        background-position: 0 0, 100% 100%, 100% calc(100% - 5px)
+    }
+
+    50% {
+        background-position: 0 100%, 100% 100%, 0 calc(100% - 5px)
+    }
+
+    75% {
+        background-position: 0 100%, 100% 0, 100% 5px
+    }
 }
